better checks for bsd net/if_mib.h inclusion
[imported from CVS by cvs2p4 at 2003/11/15 23:23:15]

[git-p4: depot-paths = "//depot/wmnd/main/": change = 58]

--- a/configure.ac
+++ b/configure.ac
@@ -77,10 +77,13 @@ then
 	)
 	
 	# freebsd sysctl driver
-	AC_CHECK_HEADERS(net/if_mib.h,
-		[AC_CHECK_HEADERS(sys/sysctl.h,
+	AC_MSG_CHECKING([for *BSD net/if_mib.h presence])
+	AC_PREPROC_IFELSE([#include <net/if_mib.h>],
+		[AC_MSG_RESULT([yes])
+		AC_CHECK_HEADERS(sys/sysctl.h,
 			[ac_drivers="$ac_drivers freebsd_sysctl"]
-		)]
+		)],
+		[AC_MSG_RESULT([no])]
 	)
 	
 	# solaris/linux streams pppd driver
