changed the revision number to 4a
[imported from CVS by cvs2p4 at 2003/11/15 23:23:15]

[git-p4: depot-paths = "//depot/wmnd/main/": change = 82]

--- a/configure.ac
+++ b/configure.ac
@@ -3,7 +3,7 @@
 # $Id$
 
 # initialization
-AC_INIT(wmnd, 0.4.4, wavexx@users.sf.net)
+AC_INIT(wmnd, 0.4.4a, wavexx@users.sf.net)
 AC_CONFIG_SRCDIR("src/wmnd.c")
 AM_CONFIG_HEADER(config.h)
 
