added config.h.in to the distribution (manually!)
[imported from CVS by cvs2p4 at 2003/11/15 23:23:15]

[git-p4: depot-paths = "//depot/wmnd/main/": change = 90]

--- a/Makefile.am
+++ b/Makefile.am
@@ -2,5 +2,5 @@
 SUBDIRS = src doc examples
 
 # extra distribution files
-EXTRA_DIST = wmnd.lsm.in wmnd.spec.in ChangeLog.0
+EXTRA_DIST = wmnd.lsm.in wmnd.spec.in ChangeLog.0 config.h.in
 
