Changed the website (www.hydra.ubiest.com) to the new domain www.yuv.info.
[imported from CVS by cvs2p4 at 2003/11/15 23:23:15]

[git-p4: depot-paths = "//depot/wmnd/main/": change = 91]

--- a/wmnd.lsm.in
+++ b/wmnd.lsm.in
@@ -12,7 +12,7 @@ Maintained-by:	wavexx@users.sf.net (Wave++, Yuri D'Elia)
 Primary-site:	metlab.unc.edu pub/Linux/apps/wmnd/
 		31k wmnd-@VERSION@.tar.gz
 		500  wmnd.lsm
-Alternate-site: http://www.hydra.ubiest.com/wmnd/
+Alternate-site: http://www.yuv.info/wmnd/
 Original-site:	http://www.wingeer.org/wmnd/
 Platforms:	linux, solaris, freebsd
 Copying-policy:	GNU copyleft
