Fixing debian's #360935 "the proper way": nobody sayd ppp_defs.h is linux/glibc specific. __u stuff already removed in prev. changes.
[git-p4: depot-paths = "//depot/wmnd/main/": change = 1220]

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,6 +1,7 @@
 # go through subdirs
-SUBDIRS = src doc examples
+SUBDIRS = src
 
 # extra distribution files
-EXTRA_DIST = wmnd.lsm.in wmnd.spec.in ChangeLog.0
-
+man_MANS = doc/wmnd.1
+data_DATA = examples/wmndrc
+EXTRA_DIST = $(man_MANS) $(data_DATA) wmnd.lsm.in wmnd.spec.in ChangeLog.0
