Do not depend on GCC 'inline' behaviour.
[git-p4: depot-paths = "//depot/wmnd/main/": change = 1221]

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -5,18 +5,15 @@ bin_PROGRAMS = wmnd
 
 # sources
 wmnd_SOURCES = \
-	bits.c bits.h \
 	cfgdata.c cfgdata.h \
 	display.c display.h \
 	drivers.c drivers.h \
-	list.c list.h \
+	list.h bits.h \
 	master.xpm \
 	misc.c misc.h \
 	ppp_defs.h pppio.h \
 	messages.c messages.h \
 	wmnd.c wmnd.h
 
-
 # extra files
 EXTRA_DIST = README.master.xpm
-
