Remove lsm and spec files from the source distribution.
[git-p4: depot-paths = "//depot/wmnd/main/": change = 1277]

--- a/Makefile.am
+++ b/Makefile.am
@@ -4,4 +4,4 @@ SUBDIRS = src
 # extra distribution files
 man_MANS = doc/wmnd.1
 data_DATA = examples/wmndrc
-EXTRA_DIST = $(man_MANS) $(data_DATA) wmnd.lsm.in wmnd.spec.in ChangeLog.0
+EXTRA_DIST = $(man_MANS) $(data_DATA) ChangeLog.0
